fix(index) - changed url github to vrizieri

--- a/android-dot-com/styles.css
+++ b/android-dot-com/styles.css
@@ -547,3 +547,9 @@ a img{
     display: none;
   }
 }
+.android-screens > div img{
+  transition: all .2s ease-in-out;
+}
+.android-screens > div img:hover{
+  transform: scale(1.1);
+}
